<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_follower</name>
  <version>1.1.0</version>
  <description>
    The follower demo was implemented using a 360 Laser Distance Sensor LDS-01. The classification algorithm is used based on previous fitting with samples of person and obstacles positions to take actions. It follows someone in front of the robot within a 50 centimeter range and 140 degrees.
  </description>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Christopher Tatsch</author>
  <author>Ashe Kim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="kkjong@robotis.com">Gilbert</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_follower</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>
