<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_panorama</name>
  <version>1.3.3</version>
  <description>
	  Package for turtlebot3 panorama.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>BSD-3-Clause</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <author>Christopher Tatsch</author>
  <author>Jihoon Lee</author>
  <author>Marcus Liebhardt</author>
  <author>Younghun Ju</author>
  <author email="nys8277@gmail.com">YeonSoo Noh</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>libboost-system-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>turtlebot3_applications_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
